<resources>
    <string name="app_name">Easy Order</string>
    <string name="so_ban_thinh">Bàn số :</string>
    <string name="Ten_khach_thinh">Khách hàng :</string>
    <string name="mon_an_thinh">Món ăn</string>
    <string name="so_luong_thinh">Số lượng</string>
    <string name="so_luong2_thinh">Số lượng:</string>
    <string name="thong_tin_mon_thinh">Các món ăn đã gọi</string>
    <string name="thong_tin_ban_thinh">Thông tin bàn ăn</string>
    <string name="them_mon_thinh">Thêm món</string>
    <string name="thanh_toan_thinh">Thanh toán</string>
    <string name="ds_ttoan_thinh">Các món ăn cần thanh toán</string>
    <string name="don_gia_thinh">Đơn giá</string>
    <string name="tong_tien_thinh">Tổng tiền: </string>
    <string name="hint_code">Code(1111)</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Log In</string>
    <string name="text_sign_up"><u>Sign up for a new account</u>.</string>
    <string name="set_infor">Vui lòng nhập thông tin</string>
    <string name="set_name">Tên khách hàng(Họ và tên)</string>
    <string name="set_table">Bàn số (1 - 11)</string>
    <string name="submit_infor">Nhập</string>
    <string name="nghin_dong"> - nghìn đồng</string>
    <string name="them_mon">Thêm món</string>
    <string name="loi_cam_on">Quý khách vui lòng đợi trong giây lát để nhân viên đến thanh toán. Xin cảm ơn!</string>
    <string name="loi_cam_on2">Cảm ơn quý khách đã sử dụng dịch vụ của nhà hàng. \nHẹn gặp lại quý khách!</string>
    <string name="trang_thai">Trạng thái</string>

</resources>
