<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thinh_blue"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_thinh">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_view_thinh"
                android:layout_marginTop="@dimen/min_margin_thinh"
                android:background="@color/thinh_nav">

                <ImageButton
                    android:id="@+id/btn_nav_ttoan_thinh"
                    android:layout_width="55.5dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@color/thinh_nav"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/thanh_toan_thinh"
                    android:textColor="@color/thinh_white"
                    android:textSize="@dimen/text_size_small_thinh" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_view_thinh"
                android:text="@string/ds_ttoan_thinh"
                android:textSize="@dimen/text_size_small_thinh"
                android:textColor="@color/thinh_white"
                android:textStyle="bold"
                android:gravity="center"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                android:background="@drawable/layout_tv"
                android:padding="5dp"
                >
                <TableRow
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.4"
                        android:layout_height="@dimen/height_view_thinh"
                        android:layout_width="wrap_content"
                        android:text="@string/mon_an_thinh"
                        android:textSize="@dimen/text_size_large_thinh"
                        android:gravity="center"/>
                    <TextView
                        android:layout_weight="0.4"
                        android:layout_height="@dimen/height_view_thinh"
                        android:layout_width="wrap_content"
                        android:text="@string/don_gia_thinh"
                        android:textSize="@dimen/text_size_large_thinh"
                        android:gravity="center"/>
                </TableRow>
                <ListView
                    android:id="@+id/lv_thanh_toan"
                    android:layout_height="@dimen/height_list_view"
                    android:layout_width="wrap_content"
                    android:fastScrollEnabled="true">
                </ListView>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_thinh"
                    android:text="@string/tong_tien_thinh"
                    android:textColor="@color/thinh_white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large_thinh"/>
                <RelativeLayout
                    android:background="@drawable/layout_tv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_thinh"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tv_tong_tien_thinh"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_large_thinh"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:layout_toRightOf="@id/tv_tong_tien_thinh"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/nghin_dong"
                        android:textSize="@dimen/text_size_large_thinh"
                        android:textStyle="bold"
                        android:gravity="center_vertical" />
                </RelativeLayout>
                <Button
                    android:id="@+id/btn_thanh_toan_tong_thinh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/thanh_toan_thinh"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
