<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thinh_white"
    android:orientation="vertical"
    android:padding="@dimen/min_padding_thinh">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:elevation="@dimen/do_bong"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:layout_marginBottom="@dimen/min_margin_thinh"
        android:background="@drawable/headline">

        <ImageButton
            android:id="@+id/btn_nav_ttin_thinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/headline"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/tv_headline_thongtin"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/thong_tin_ban_thinh"
            android:textColor="@color/thinh_white"
            android:textSize="@dimen/text_size_large_thinh" />
    </RelativeLayout>
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_thinh"
                android:paddingRight="@dimen/padding_thinh">

                <LinearLayout
                   android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_thinh"
                    android:orientation="horizontal"
                    android:background="@drawable/layout_tv"
                    android:layout_margin="@dimen/min_margin_thinh"
                    android:paddingBottom="@dimen/min_padding_thinh"
                    android:paddingLeft="@dimen/padding_thinh">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/so_ban_thinh"
                            android:textSize="@dimen/text_size_large_thinh"
                            android:gravity="center" />
                        <TextView
                            android:id="@+id/tv_banso_thinh"
                            android:textSize="@dimen/text_size_large_thinh"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/padding_thinh"
                            android:textStyle="bold"
                            android:textColor="@color/red"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_thinh"
                    android:orientation="horizontal"
                    android:background="@drawable/layout_tv"
                    android:layout_margin="@dimen/min_margin_thinh"
                    android:paddingBottom="@dimen/min_padding_thinh"
                    android:paddingLeft="@dimen/padding_thinh">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Ten_khach_thinh"
                            android:textSize="@dimen/text_size_large_thinh"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tv_ten_kh_thinh"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/padding_thinh"
                            android:textStyle="bold"
                            android:textColor="@color/red"
                            android:textSize="@dimen/text_size_large_thinh"
                            android:layout_gravity="center"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thong_tin_mon_thinh"
                    android:textSize="@dimen/text_size_small_thinh"
                    android:layout_marginBottom="@dimen/min_margin_thinh"
                    android:textColor="#5D4037"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*"
                    android:background="@drawable/input_view"
                    android:padding="5dp">
                    <TableRow>
                        <TextView
                            android:layout_height="@dimen/height_view_thinh"
                            android:layout_width="wrap_content"
                            android:text="@string/mon_an_thinh"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_large_thinh"
                            android:gravity="center"
                            android:padding="2dp"/>
                        <TextView
                            android:layout_height="@dimen/height_view_thinh"
                            android:layout_width="wrap_content"
                            android:text="@string/so_luong_thinh"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_large_thinh"
                            android:gravity="center"/>
                    </TableRow>
                    <ListView
                        android:id="@+id/lv_thong_tin"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:smoothScrollbar="true">
                    </ListView>

                </TableLayout>
                </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_weight="4"
        android:layout_marginTop="@dimen/margin_thinh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:id="@+id/btn_them_mon_thinh"
            android:text="@string/them_mon_thinh"
            android:layout_marginRight="@dimen/min_margin_thinh"
            android:layout_marginLeft="@dimen/margin_thinh"
            android:textColor="@color/thinh_white"
            android:layout_weight="0.5"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_thanh_toan_thinh"
            android:text="@string/thanh_toan_thinh"
            android:layout_marginLeft="@dimen/min_margin_thinh"
            android:layout_marginRight="@dimen/margin_thinh"
            android:background="@drawable/button"
            android:textColor="@color/thinh_white"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
